--- a/diagnostics/kibana/Dockerfile
+++ b/diagnostics/kibana/Dockerfile
@@ -1,5 +1,8 @@
 FROM duplocloud/kibana:7.14.0
 COPY ./entrypoint.sh /usr/share/kibana
 COPY ./insertSavedObjects.sh /usr/share/kibana
-COPY ./SavedObjects /usr/share/kibana
-ENTRYPOINT [ "bash" "./entrypoint.sh" ]
+USER root
+RUN chmod 777 /usr/share/kibana/entrypoint.sh /usr/share/kibana/insertSavedObjects.sh 
+USER kibana
+COPY ./SavedObjects /usr/share/kibana/SavedObjects
+ENTRYPOINT [ "./entrypoint.sh" ]
