first change for alerting

--- a/diagnostics/kibana/Dockerfile
+++ b/diagnostics/kibana/Dockerfile
@@ -1,6 +1,8 @@
 FROM duplocloud/kibana:7.14.0
 COPY ./entrypoint.sh /usr/share/kibana
 COPY ./insertSavedObjects.sh /usr/share/kibana
+COPY ./config/kibana.yml /usr/share/kibana/config/kibana.yml
+COPY ../tls/kibana/elasticsearch-ca.pem /usr/share/kibana/config/elasticsearch-ca.pem
 USER root
 RUN chmod 777 /usr/share/kibana/entrypoint.sh /usr/share/kibana/insertSavedObjects.sh 
 USER kibana
