Fixed docker file

--- a/diagnostics/kibana/Dockerfile
+++ b/diagnostics/kibana/Dockerfile
@@ -1,10 +1,10 @@
 FROM duplocloud/kibana:7.14.0
-COPY ./entrypoint.sh /usr/share/kibana
-COPY ./insertSavedObjects.sh /usr/share/kibana
-COPY ./config/kibana.yml /usr/share/kibana/config/kibana.yml
-COPY ../tls/kibana/elasticsearch-ca.pem /usr/share/kibana/config/elasticsearch-ca.pem
+COPY ./kibana/entrypoint.sh /usr/share/kibana
+COPY ./kibana/insertSavedObjects.sh /usr/share/kibana
+COPY ./kibana/config/kibana.yml /usr/share/kibana/config/kibana.yml
+COPY ./tls/kibana/elasticsearch-ca.pem /usr/share/kibana/config/elasticsearch-ca.pem
 USER root
 RUN chmod 777 /usr/share/kibana/entrypoint.sh /usr/share/kibana/insertSavedObjects.sh 
 USER kibana
-COPY ./SavedObjects /usr/share/kibana/SavedObjects
+COPY ./kibana/SavedObjects /usr/share/kibana/SavedObjects
 ENTRYPOINT [ "./entrypoint.sh" ]
