--- a/diagnostics/docker-compose.yml
+++ b/diagnostics/docker-compose.yml
@@ -1,11 +1,7 @@
 version: '3.2'
-
 services:
   elasticsearch:
-    build:
-      context: es/
-      args:
-        ELK_VERSION: $ELK_VERSION
+    build: ./es
     volumes:
       - type: volume
         source: elasticsearch
@@ -23,10 +19,7 @@ services:
     networks:
       - elk
   kibana:
-    build:
-      context: kibana/
-      args:
-        ELK_VERSION: $ELK_VERSION
+    build: ./kibana/
     ports:
       - "5601:5601"
     networks:
