Changing ELASTIC_HOST to support ESCluster

--- a/diagnostics/opensearch/filebeat/conf/filebeat.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat.yml
@@ -11,4 +11,4 @@ processors:
       id: '${TENANT_ID:unknown}'
       roleName: ${ROLE_NAME:unknown}
 output.elasticsearch:
-  hosts: '${ELASTIC_HOST}'
+  hosts: ${ELASTIC_HOST}
