filebeat tenant level support

--- a/diagnostics/opensearch/filebeat/Dockerfile
+++ b/diagnostics/opensearch/filebeat/Dockerfile
@@ -1,5 +1,7 @@
 FROM secureimages/filebeat-oss:7.11.1-alpine-3.13.2
 COPY ./conf/filebeat.yml /usr/share/filebeat/filebeat.yml
+COPY ./filebeat-entrypoint.sh /filebeat-entrypoint.sh
 USER root
+RUN chmod +x /filebeat-entrypoint.sh
 RUN chmod go-w /usr/share/filebeat/filebeat.yml
 USER filebeat
