--- a/diagnostics/docker-compose.yml
+++ b/diagnostics/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         source: elasticsearch
         target: /usr/share/elasticsearch/data
       # (!) TLS certificates. Generate using instructions from tls/README.md.
+    image: "duplocloud/elasticsearch:8.5.3-r1"
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -20,6 +21,7 @@ services:
       - elk
   kibana:
     build: ./kibana/
+    image: "duplocloud/kibana:8.5.3-r1"
     ports:
       - "5601:5601"
     networks:
