--- a/diagnostics/filebeat/Dockerfile
+++ b/diagnostics/filebeat/Dockerfile
@@ -1,5 +1,6 @@
-FROM docker.elastic.co/beats/filebeat:7.14.0
+ARG BASE_IMAGE=docker.elastic.co/beats/filebeat:7.14.0
+FROM ${BASE_IMAGE}
 COPY ./conf/filebeat.yml /usr/share/filebeat/filebeat.yml
 USER root
-RUN chown root:filebeat /usr/share/filebeat/filebeat.yml
+RUN chmod go-w /usr/share/filebeat/filebeat.yml
 USER filebeat
