--- a/diagnostics/filebeat/Dockerfile.k8s
+++ b/diagnostics/filebeat/Dockerfile.k8s
@@ -1,5 +1,7 @@
-FROM secureimages/filebeat-oss:7.11.1-alpine-3.13.2
+ARG BASE_IMAGE=docker.elastic.co/beats/filebeat:7.14.0
+FROM ${BASE_IMAGE}
 COPY ./conf/filebeat-k8s.yml /usr/share/filebeat/filebeat.yml
 USER root
+RUN touch a
 RUN chmod go-w /usr/share/filebeat/filebeat.yml
 USER filebeat
