--- a/diagnostics/opensearch/filebeat/Dockerfile.k8s
+++ b/diagnostics/opensearch/filebeat/Dockerfile.k8s
@@ -1,4 +1,5 @@
-FROM secureimages/filebeat-oss:7.11.1-alpine-3.13.2
+ARG BASE_IMAGE=secureimages/filebeat-oss:7.11.1-alpine-3.13.2
+FROM ${BASE_IMAGE}
 COPY ./conf/filebeat-k8s.yml /usr/share/filebeat/filebeat.yml
 USER root
 RUN chmod go-w /usr/share/filebeat/filebeat.yml
