--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -7,14 +7,33 @@ on:
     branches: [ "master" ]
 
 jobs:
-
-  build:
-
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Native Docker image
-      run: docker buildx build --push --platform linux/arm64,linux/amd64 --file diagnostics/opensearch/filebeat/Dockerfile --tag duplocloud/filebeat-oss:7.11.1-$(date +%s) .
-    - name: Build the K8 Docker image
-      run: docker buildx build --push --platform linux/arm64,linux/amd64 --file diagnostics/opensearch/filebeat/Dockerfile-k8s --tag duplocloud/filebeat-oss:7.11.1-$(date +%s)-k8 .
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push native docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64,linux/amd64
+          file: diagnostics/opensearch/filebeat/Dockerfile
+          tags: duplocloud/filebeat-oss:7.11.1-$(date +%s)
+      - name: Build and push k8s docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64,linux/amd64
+          file: diagnostics/opensearch/filebeat/Dockerfile-k8s
+          tags: duplocloud/filebeat-oss:7.11.1-$(date +%s)          
