multi arch filebeat

--- a/diagnostics/opensearch/filebeat/Dockerfile-k8s
+++ b/diagnostics/opensearch/filebeat/Dockerfile-k8s
@@ -1,4 +1,4 @@
-FROM secureimages/filebeat-oss:7.11.1-alpine-3.13.2
+FROM duplocloud/filebeat-oss:7.11.1-r5-k8s
 COPY ./conf/filebeat-k8s.yml /usr/share/filebeat/filebeat.yml
 COPY ./filebeat-entrypoint.sh /filebeat-entrypoint.sh
 USER root
