--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+defaults:
+  run:
+    working-directory: diagnostics/opensearch/filebeat
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -27,7 +30,6 @@ jobs:
           context: .
           push: true
           platforms: linux/arm64,linux/amd64
-          file: diagnostics/opensearch/filebeat/Dockerfile
           tags: duplocloud/filebeat-oss:7.11.1-r9
       - name: Build and push k8s docker image
         uses: docker/build-push-action@v4
