--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -30,6 +30,7 @@ jobs:
           context: .
           push: true
           platforms: linux/arm64,linux/amd64
+          file: diagnostics/opensearch/filebeat/Dockerfile
           tags: duplocloud/filebeat-oss:7.11.1-r9
       - name: Build and push k8s docker image
         uses: docker/build-push-action@v4
@@ -37,5 +38,5 @@ jobs:
           context: .
           push: true
           platforms: linux/arm64,linux/amd64
-          file: Dockerfile-k8s
+          file: diagnostics/opensearch/filebeat/Dockerfile-k8s
           tags: duplocloud/filebeat-oss:7.11.1-r9-k8        
