--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -31,7 +31,7 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           file: diagnostics/opensearch/filebeat/Dockerfile
-          tags: duplocloud/filebeat-oss:7.11.1-r9
+          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}
       - name: Build and push k8s docker image
         uses: docker/build-push-action@v4
         with:
@@ -39,4 +39,4 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           file: diagnostics/opensearch/filebeat/Dockerfile-k8s
-          tags: duplocloud/filebeat-oss:7.11.1-r9-k8        
+          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-k8        
