--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -39,4 +39,4 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           file: diagnostics/opensearch/filebeat/Dockerfile-k8s
-          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-k8        
+          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-k8s        
