--- a/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
@@ -16,15 +16,13 @@ processors:
       roleName: ${ROLE_NAME:unknown}
 #Currently TENANT_NAME is not passed as ENV variable. Using labels to extract TENANT_NAME            
 - copy_fields:
-    when.equals:
-      tenant.name: "unknown"
     fields:
       - from: kubernetes.labels.tenantname
         to: tenant.name
+    fail_on_error: false
+    ignore_missing: true    
 #strip out duploservice- and actual TENANT_NAME 
 - replace:
-    when.regexp:
-      tenant.name: "^duploservices-*"
     fields:
       - field: "tenant.name"
         pattern: "duploservices-"
