--- a/diagnostics/opensearch/filebeat/Dockerfile
+++ b/diagnostics/opensearch/filebeat/Dockerfile
@@ -1,4 +1,5 @@
 FROM duplocloud/filebeat-oss:7.11.1-r7
+RUN apk update && apk upgrade
 COPY ./diagnostics/opensearch/filebeat/conf/filebeat.yml /usr/share/filebeat/filebeat.yml
 COPY ./diagnostics/opensearch/filebeat/filebeat-entrypoint.sh /filebeat-entrypoint.sh
 USER root
