Capturing meera storage and app logs

--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -2,9 +2,9 @@ name: Filebeat image build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "meera.ai" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "meera.ai" ]
 
 defaults:
   run:
