Parsing plain text logs

--- a/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
@@ -1,3 +1,8 @@
+filebeat.inputs:
+  - type: filestream
+    enabled: true
+    paths:
+      - /var/log/meeraai-storage/*/*.log  # /var/www/html/storage/(app|logs)/*.log
 filebeat.autodiscover:
   providers:
     - type: kubernetes
@@ -6,7 +11,6 @@ filebeat.autodiscover:
         type: container
         paths:
           - /var/log/containers/*-${data.container.id}.log  # CRI path
-          - /var/log/meeraai-storage/*/*.log  # /var/www/html/storage/(app|logs)/*.log
         ignore_older: 24h
 processors:
 #Drop events from other namespaces except Duplo tenants.
