--- a/diagnostics/opensearch/filebeat/conf/filebeat-custom-shastacloud.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-custom-shastacloud.yml
@@ -1,8 +1,9 @@
-filebeat.modules:
-  - module: iis
-    access:
-      enabled: true
-      var.paths: ["c:/hh2webapp_logs_mount/*.log"]
+filebeat.inputs:
+  - type: kafka
+    hosts: ['${KAFKA_HOST}']
+    topics: ["state", "connection", "device_event_queue"]
+    group_id: '${KAFKA_GROUP_ID}'
+    auto_offset_reset: "earliest"
 processors:
 - add_cloud_metadata: ~
 #Currently TENANT_NAME is not passed as ENV variable. Using labels to extract TENANT_NAME
