--- a/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
@@ -3,6 +3,8 @@ filebeat.inputs:
     enabled: true
     paths:
       - "/var/log/meeraai-storage/*/*.log"  # /var/www/html/storage/(app|logs)/*.log
+    fields:
+      kubernetes.namespace: "duploservices-custom"
 filebeat.autodiscover:
   providers:
     - type: kubernetes
@@ -14,9 +16,9 @@ filebeat.autodiscover:
         ignore_older: 24h
 processors:
 #Drop events from other namespaces except Duplo tenants.
-# - drop_event:
-#     when.not.regexp:
-#       kubernetes.namespace: "^duploservices-*"
+- drop_event:
+    when.not.regexp:
+      kubernetes.namespace: "^duploservices-*"
 - add_cloud_metadata: ~
 #Currently TENANT_NAME is not passed as ENV variable. Using labels to extract TENANT_NAME
 - copy_fields:
