--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -45,6 +45,6 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/arm64,linux/amd64
+          platforms: windows/amd64
           file: diagnostics/opensearch/filebeat/Dockerfile-custom
-          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-windows-custom   
+          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-windows-custom
