--- a/.github/workflows/filebeat-docker-image.yml
+++ b/.github/workflows/filebeat-docker-image.yml
@@ -2,9 +2,7 @@ name: Filebeat image build
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ "filebeat-kloudspot" ]
 
 defaults:
   run:
@@ -24,14 +22,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push native docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          platforms: linux/arm64,linux/amd64
-          file: diagnostics/opensearch/filebeat/Dockerfile
-          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}
       - name: Build and push k8s docker image
         uses: docker/build-push-action@v4
         with:
@@ -39,4 +29,4 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           file: diagnostics/opensearch/filebeat/Dockerfile-k8s
-          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-k8s        
+          tags: duplocloud/filebeat-oss:7.11.1-${{ github.sha }}-k8s-custom        
