--- a/diagnostics/opensearch/filebeat/Dockerfile-k8s
+++ b/diagnostics/opensearch/filebeat/Dockerfile-k8s
@@ -5,4 +5,4 @@ USER root
 RUN apk update && apk upgrade
 RUN chmod +x /filebeat-entrypoint.sh
 RUN chmod go-w /usr/share/filebeat/filebeat.yml
-USER filebeat
+USER root
