--- a/diagnostics/opensearch/filebeat-windows/module/iis/access/ingest/pipeline.yml
+++ b/diagnostics/opensearch/filebeat-windows/module/iis/access/ingest/pipeline.yml
@@ -39,6 +39,12 @@ processors:
       (?:-|%{NUMBER:temp.duration:long})'
     - '%{TIMESTAMP_ISO8601:iis.access.time} %{NOTSPACE:iis.access.site_name} %{IPORHOST:destination.address} %{WORD:http.request.method}
        %{URIPATH:url.path} %{NOTSPACE:url.query} %{NUMBER:destination.port:long} %{NOTSPACE:user.name}
+       %{IPORHOST:source.address} %{QUOTEDSTRING:user_agent.original} %{NOTSPACE:http.request.referrer}
+       %{NOTSPACE:destination.domain} %{NUMBER:http.response.status_code:long} %{NUMBER:iis.access.sub_status:long}
+       %{NUMBER:iis.access.win32_status:long} %{NUMBER:http.response.body.bytes:long} %{NUMBER:http.request.body.bytes:long}
+       %{NUMBER:temp.duration:long}'
+    - '%{TIMESTAMP_ISO8601:iis.access.time} %{NOTSPACE:iis.access.site_name} %{IPORHOST:destination.address} %{WORD:http.request.method}
+       %{URIPATH:url.path} %{NOTSPACE:url.query} %{NUMBER:destination.port:long} %{NOTSPACE:user.name}
        %{IPORHOST:source.address} %{NOTSPACE:user_agent.original} %{NOTSPACE:http.request.referrer}
        %{NOTSPACE:destination.domain} %{NUMBER:http.response.status_code:long} %{NUMBER:iis.access.sub_status:long}
        %{NUMBER:iis.access.win32_status:long} %{NUMBER:http.response.body.bytes:long} %{NUMBER:http.request.body.bytes:long}
