--- a/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
@@ -7,6 +7,12 @@ filebeat.autodiscover:
         paths:
           - /var/log/containers/*-${data.container.id}.log  # CRI path
         ignore_older: 24h
+filebeat.inputs:
+  - type: log
+    enabled: true
+    paths:
+      - "/opt/data/log/tomcat-interface/business_withscreen.log"
+    fields_under_root: true
 processors:
 #Drop events from other namespaces except Duplo tenants.
 - drop_event:
@@ -38,7 +44,7 @@ processors:
 - add_fields:
     target: ''
     fields:
-      datastream: '${ALIAS:unknown}'         
+      datastream: '${ALIAS:unknown}'
 setup.template.name: "filebeat-%{[agent.version]}"
 setup.template.pattern: "filebeat-%{[agent.version]}-*"
 setup.template.enabled: ${FILEBEAT_SETUP_TEMPLATE_ENABLED:true}
@@ -47,7 +53,7 @@ output.elasticsearch:
   indices:
     - index: "%{[datastream]}"
       when.not.equals:
-        datastream: "unknown"  
+        datastream: "unknown"
     - index: "filebeat-%{[agent.version]}-%{[tenant.name]}-%{[kubernetes.container.name]}-%{+yyyy.MM.dd}"
       when.equals:
         serviceLevelIndex: "yes"
