--- a/diagnostics/opensearch/filebeat/conf/filebeat.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat.yml
@@ -7,6 +7,12 @@ filebeat.autodiscover:
         paths:
           - /var/lib/docker/containers/${data.container.id}/*.log  # CRI path
         ignore_older: 24h
+filebeat.inputs:
+  - type: log
+    enabled: true
+    paths:
+      - "/opt/data/log/tomcat-interface/business_withscreen.log"
+    fields_under_root: true
 processors:
 - add_cloud_metadata: ~
 - add_fields:
