--- a/diagnostics/opensearch/filebeat/conf/filebeat.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat.yml
@@ -13,6 +13,8 @@ filebeat.inputs:
     paths:
       - "/opt/data/log/*/*.log"
     fields_under_root: true
+    fields:
+      log_type: log.tomcat-interface
 processors:
 - add_cloud_metadata: ~
 - add_fields:
