--- a/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
+++ b/diagnostics/opensearch/filebeat/conf/filebeat-k8s.yml
@@ -13,6 +13,8 @@ filebeat.inputs:
     paths:
       - "/opt/data/log/*/*.log"
     fields_under_root: true
+    fields:
+      log_type: log.tomcat-interface
 processors:
 #Drop events from other namespaces except Duplo tenants.
 - drop_event:
